# ProjectViolet

./: README.md  Source Code  Source Code.py  Status.py  disappointment.py  greeting.py  main.py  pyproject.toml
AnimeSeries/: __init__.py  popular.csv
Calculation/: __init__.py
Commands/: __init__.py  app_command.py  command_data.txt
Database/: UserData.db  __init__.py
DeepLearning/: __init__.py  characters.json  statistics.csv
Discord/: __init__.py
Excels/: excel_data.csv
Image/: __init__.py
Interactions/: disappointment.csv  greeting.csv  praise.csv
Lyrics/: __init__.py  song_titles.csv
Lyrics/Preview/: Eutopia Preview.m4a  TruE Preview.m4a
Lyrics/Title/: adrenaline.txt  alive.txt  always_in_my_heart.txt  amy.txt  anima.txt  anniversary.txt  aozora_no_raphsody.txt  ascension_to_heaven.txt  awake_now.txt  axium_crisis.txt  believe.txt  believe_in_you.txt  bunny_bunny_carrot_carrot.txt  caelestinum_finale_termini.txt  chant_of_nine_bows.txt  colorful_dreams_colorful_smiles.txt  cyberangel.txt  da_capo.txt  elogia_cinerosa.txt  eutopia.txt  from_y_to_y.txt  (+38 more)
Memories/: Violet's Memories.db  __init__.py
MyAnimeList/: __init__.py
Myanimelist/: __init__.py
Notes/: database.db
OpenAI/: Database.db  __init__.py
Playground/: __init__.py
PrefixCommands/: animeseries.py  converterseries.py  databaseseries.py  memories.py  statusseries.py  violetbody.py  youtubeseries.py
Violet/: Description.txt  StatusData.py  algorithm.py  bot_info.py  status.csv
Website/: __init__.py
YouTube/: Database.csv  __init__.py
bot_info/: __init__.py  status.csv
(+4 files in other folders)
